# cp_analytical_comparision

./: .gitignore  README.md  pyproject.toml
config/: method_defaults.yaml
docs/: CODING_AGENT_INSTRUCTIONS.md  CP_METHOD_MODULES.md  DECISION_LOG.md  PDF_EXPORT_WORKFLOW.md  PROJECT_MEMORY.md  REGULATORY_RESOURCE_HANDLING.md  REVIEW_CHECKLIST.md  STATISTICAL_DECISION_RULES.md  USP1010_FORMULA_REGISTRY.md  USP1010_TRACEABILITY_MATRIX.md
examples/: granule_assay_paired_example.csv  inline_historical_runs_example.csv  inline_new_run_reference_samples_example.csv  inline_run_summary_example.csv  paired_offline_nir_example.csv  tablet_transmission_paired_example.csv
notebooks/: 01_general_paired_offline_nir_comparison.ipynb  01_general_paired_offline_nir_comparison_simulated.ipynb  02_granule_assay_paired_comparison.ipynb  02_granule_assay_paired_comparison_simulated.ipynb  03_tablet_transmission_paired_comparison.ipynb  03_tablet_transmission_paired_comparison_simulated.ipynb  04_inline_diversion_performance_verification.ipynb  04_inline_diversion_performance_verification_simulated.ipynb
resources/: README.md
tests/: conftest.py  test_accuracy_equivalence.py  test_documentation_files.py  test_inline_diversion.py  test_method_config.py  test_notebook_export.py  test_notebook_markdown_math.py  test_notebook_theory_sections.py  test_paired_comparison_decision.py  test_plots.py  test_precision_noninferiority.py  test_process_repeatability.py  test_project_import.py  test_report_equations.py  test_report_tables.py  test_reporting_text.py  test_simulated_notebooks.py  (+2 more)
(+15 files in other folders)
