[project]
name = "nir-cp-comparability"
version = "0.1.0"
description = "Notebook-first statistical workbench for NIR comparative studies supporting an EMA Comparability Protocol."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "openpyxl",
    "pyyaml",
    "nbformat",
    "nbconvert",
    "jupyter",
    "ipykernel",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nir_cp"]
